# HaskellDebugger

./: CommandParser.hs  GhcHello.hs  HaskellDebugger.cabal  LICENSE  Main.hs  README.md  RemoteDebugger.cabal  TestMainModule.hs  remote-debugger.cabal
src/: CmdArgsParser.hs  CommandParser.hs  Debugger.hs  DebuggerImpl.hs  DebuggerMonad.hs  DebuggerUtils.hs  ForeignDebugLib.hs  Main.hs  ParserMonad.hs
src/c_src/: DebugLibrary.cpp  DebugLibrary.h
